--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -1,3 +1,22 @@
-.map{
-  height: 400px;
+.map {
+  height: 35%;
+  width: 30%;
+}
+
+.input-title {
+  position: relative;
+}
+.description-title{
+  position: relative;
+}
+
+.item {
+  margin-left: 65%;
+  background-color: #222222;
+  height: 45px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
