--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -20,6 +20,8 @@
   flex-direction: row;
   align-items: center;
   position: relative;
+  left: 70%;
+  width: 30%;
 }
 .target{
   background-color: orangered;
